--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.44",
     "node-cron": "^3.0.3",
-    "node-telegram-bot-api": "^0.64.0"
+    "node-telegram-bot-api": "^0.64.0",
+    "path": "^0.12.7",
+    "winston": "^3.16.0"
   },
   "devDependencies": {
     "cypress": "^13.7.0"
